unpackaged/main/default/objects/KCSArticle_kav__c/KCSArticle_kav__c.object-meta.xml
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <label>KCSArticle_kav__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>KCSArticle_kav Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_kav__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>