unpackaged/main/default/objects/KCSArticle_kav__c/fields/IsLatestVersion__c.field-meta.xml
<CustomField>
    <fullName>IsLatestVersion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsLatestVersion</label>
    <type>Checkbox</type>
</CustomField>