unpackaged/main/default/objects/KCSArticle_kav__c/fields/IsVisibleInApp__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInApp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVisibleInApp</label>
    <type>Checkbox</type>
</CustomField>