unpackaged/main/default/objects/KCSArticle_kav__c/fields/IsVisibleInCsp__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInCsp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVisibleInCsp</label>
    <type>Checkbox</type>
</CustomField>