unpackaged/main/default/objects/KCSArticle_kav__c/fields/IsVisibleInPkb__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInPkb__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVisibleInPkb</label>
    <type>Checkbox</type>
</CustomField>