unpackaged/main/default/objects/KCSArticle_kav__c/fields/IsVisibleInPrm__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInPrm__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVisibleInPrm</label>
    <type>Checkbox</type>
</CustomField>