unpackaged/main/default/objects/KCSArticle_kav__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>