unpackaged/main/default/objects/KCSArticle_kav__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>