unpackaged/main/default/objects/KCSArticle_kav__c/fields/PublishStatus__c.field-meta.xml
<CustomField>
    <fullName>PublishStatus__c</fullName>
    <label>PublishStatus</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>