unpackaged/main/default/objects/KCSArticle_kav__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <label>VersionNumber</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>